Fix the height of the open menu on mobile

--- a/style.css
+++ b/style.css
@@ -400,7 +400,7 @@ body {
     top: -100%;
     left: 0;
     right: 0;
-    height: 100vh;
+    height: 100dvh;
     opacity: 0;
     pointer-events: none;
     background-color: var(--dark-color);
